[package]
name = "movie_list"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes"] }
dotenv = "0.15"
http-client = "3"
serde = "1"
surf = "2.0.0-alpha.4"
